--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>lesson 17</title>
+	<title> Lesson 17 </title>
+	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<h1>leqcia17</h1>
-<section>
-    <button class="gamaqre">gamaqre</button>
-</section>
-<script src="main.js"></script>
+	<button onclick="this.remove()">Remove</button>
+	<section id="countries-list"></section>
+
+	<script src="main.js"></script>
+	<script src="app.js"></script>
+
 </body>
 </html>
